[tool.poetry]
name = "chirouhetang"
version = "0.1.0"
description = ""
authors = ["chenxu10 <shenxu2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23"
pytest = "^8.3.4"
scikit-learn = "1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
